# PoleZeroTool

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: build.yml
.github/workflows/: build.yml
CMake/: GithubENV.cmake
Installers/: license.rtf  readme.rtf
Installers/MacOS/: distribution.xml  distribution.xml.template
Installers/Windows/: PoZeToolInstaller.iss
Source/DSP/: CircBuf.h  Filter.h  FilterDesign.cpp  FilterDesign.h  MathFunctions.h  Response.h
Source/Data/: PoleZeroState.cpp  PoleZeroState.h  State.cpp  State.h
Source/Data/Attachments/: DragBoxAttachment.h  FilterAttachment.h  FilterDesignAttachment.h  PlotAttachment.h  PlotDataAttachment.h  PlotRangeAttachment.h  PoZePlotAttachment.h  PropertyAttachment.h  ResponsePlotAttachment.h
Source/Data/Utils/: TreeListWrapper.h  TreePropertyWrapper.h  TreeWrapper.h  VariantConverters.h
Source/GUI/: FilterTextFormatter.h  GUI.h  LookAndFeel.h
Source/GUI/Components/: BoxedLabel.h  DragBox.cpp  DragBox.h  GridAxis.h  LogoButton.h  Plot.h  PoZeHelpDialog.h  PoZePlot.cpp  PoZePlot.h  PoZeTable.h  ResponsePlot.h  RoundedCornerComponent.h  VersionDialog.h  VolumeMeter.h
Source/GUI/Sections/: FormulaSection.h  Overlay.h  PoleZeroSection.h  ResponsePlotSection.h  SettingsSection.h  TooltipSection.h
Source/Plugin/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Utils/: MappedRange.h  TripleBuffer.h  Utils.h
